Keep the memory mapping probe compiling on JDK 8
Its own workflow builds it on JDK 8, 17 and 21, since those are the versions
where there is no arena and the release of a mapping is worth measuring. The
/proc/self/maps check added with T8 used Path.of and var, neither of which
exists on JDK 8, so the three JDK 8 legs of that matrix would have failed to
compile. Verified by compiling with javac 1.8.

Also brings the header comment on the workflow up to date: the probe now
measures why the collector is not what releases a mapping, rather than how
well it does it.